fix: scrollbar

--- a/app/globals.css
+++ b/app/globals.css
@@ -13,11 +13,39 @@
 }
 html,
 body {
-  width: 100%;
+  overflow: hidden;
   height: 100%;
   font-family: "IBM Plex Mono", monospace;
 }
 
+.custom-scroll::-webkit-scrollbar {
+  width: 6px; 
+}
+
+.custom-scroll::-webkit-scrollbar-track {
+  background: #0d1117; 
+  border: none; 
+}
+
+.custom-scroll::-webkit-scrollbar-thumb {
+  background: #1f2937; 
+  border-radius: 10px;
+  border: none;
+}
+
+.custom-scroll::-webkit-scrollbar-thumb:hover {
+  background: #58a6ff; 
+}
+
+.custom-scroll {
+  scrollbar-width: thin;
+  scrollbar-color: #1f2937 #0d1117;
+}
+
+.terminal-scroll {
+  scrollbar-width: thin;
+  scrollbar-color: #30363d #0d1117;
+}
 :root {
   --muted: oklch(0.97 0 0);
   --accent: oklch(0.97 0 0);
